obsolete method invocation 'currentThread().getId()' replaced.